Fix Bild ID